@@ -2,7 +2,9 @@ package com.codecool.shop.dao.implementation;
 
 import com.codecool.shop.dao.ProductCategoryDao;
 import com.codecool.shop.jdbc.JDBCController;
+import com.codecool.shop.model.Product;
 import com.codecool.shop.model.ProductCategory;
+import com.codecool.shop.model.Supplier;
 
 import java.util.*;
 
@@ -21,12 +23,31 @@ public class ProductCategoryDaoJDBC implements ProductCategoryDao {
 
     private List<ProductCategory> objectCreator(List<Map<String,Object>> resultRowsFromQuery) {
         List<ProductCategory> productCategories = new ArrayList<>();
+        List<String> productCategoryNames = new ArrayList<>();
+        ProductCategory prodCat = null;
 
         for (Map singleRow : resultRowsFromQuery) {
-            productCategories.add(new ProductCategory((Integer) singleRow.get("id"),
-                    (String) singleRow.get("name"),
-                    (String) singleRow.get("description"),
-                    (String) singleRow.get("department")));
+            if (!productCategoryNames.contains((String) singleRow.get("name"))) {
+                productCategoryNames.add((String) singleRow.get("name"));
+                prodCat = new ProductCategory((Integer) singleRow.get("id"),
+                        (String) singleRow.get("name"),
+                        (String) singleRow.get("description"),
+                        (String) singleRow.get("department"));
+                productCategories.add(prodCat);
+            }
+            productCategories.get(productCategories.indexOf(prodCat)).addProduct(
+                    new Product((Integer) singleRow.get("prod_id"),
+                        (String) singleRow.get("prod_name"),
+                        (float) ((double) singleRow.get("default_price")),
+                        (String) singleRow.get("currency_string"),
+                        (String) singleRow.get("prod_desc"),
+                        new ProductCategory((Integer) singleRow.get("id"),
+                                (String) singleRow.get("name"),
+                                (String) singleRow.get("department"),
+                                (String) singleRow.get("description")),
+                        new Supplier((Integer) singleRow.get("supp_id"),
+                                (String) singleRow.get("supp_name"),
+                                (String) singleRow.get("supp_desc"))));
         }
 
         return productCategories;
@@ -52,7 +73,23 @@ public class ProductCategoryDaoJDBC implements ProductCategoryDao {
     @Override
     public ProductCategory find(String name) {
         List<Map<String, Object>> productCategories = controller.executeQueryWithReturnValue(
-        "SELECT * FROM product_category WHERE name LIKE ?;",
+        "SELECT product_category.id, " +
+                  "product_category.name, " +
+                  "product_category.description, " +
+                  "product_category.department, " +
+                  "product.id AS prod_id," +
+                  "product.name AS prod_name, " +
+                  "product.default_price, " +
+                  "product.currency_string, " +
+                  "product.description AS prod_desc, " +
+                  "supplier.id AS supp_id, " +
+                  "supplier.name AS supp_name, " +
+                  "supplier.description AS supp_desc " +
+                "FROM product_category " +
+                  "JOIN product ON product.product_category_id = product_category.id " +
+                  "JOIN supplier ON product.supplier_id = supplier.id " +
+                "ORDER BY product_category.id " +
+                "WHERE product_category.name LIKE ?;",
             Collections.singletonList(name));
 
         return (productCategories.size() != 0) ? this.objectCreator(productCategories).get(0) : null;
@@ -68,7 +105,22 @@ public class ProductCategoryDaoJDBC implements ProductCategoryDao {
     @Override
     public List<ProductCategory> getAll() {
         return this.objectCreator(controller.executeQueryWithReturnValue(
-        "SELECT * FROM product_category;",
+        "SELECT product_category.id, " +
+                  "product_category.name, " +
+                  "product_category.description, " +
+                  "product_category.department, " +
+                  "product.id AS prod_id, " +
+                  "product.name AS prod_name, " +
+                  "product.default_price, " +
+                  "product.currency_string, " +
+                  "product.description AS prod_desc, " +
+                  "supplier.id AS supp_id, " +
+                  "supplier.name AS supp_name, " +
+                  "supplier.description AS supp_desc " +
+                "FROM product_category " +
+                  "JOIN product ON product.product_category_id = product_category.id " +
+                  "JOIN supplier ON product.supplier_id = supplier.id " +
+                "ORDER BY product_category.id;",
             Collections.emptyList()));
     }
 
